Polish Javadoc and internals of the TestContext framework